@@ -1,2 +1,2 @@
 #!/bin/bash
-java -cp "./ojdbc6.jar:." Server $@
+java -cp "./ojdbc6.jar:." -Djava.security.manager -Djava.security.policy=security.policy Server $@
